fixed alignement

--- a/SecuredMess/wwwroot/css/DashBoard.css
+++ b/SecuredMess/wwwroot/css/DashBoard.css
@@ -2,15 +2,22 @@
 
 body {
     margin: 0 auto;
+    background: #6a11cb;
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
 }
+
 
 #mainContainer {
     display: flex;
     height: 80vh;
-    width: 1200px;
+    width: 60vw;
     background: rgba(255, 255, 255, 0.85);
     border-radius: 10px;
-    margin: 20px;
+    margin-left: 20vw;
+    margin-top: 10vh;
 }
 
 .menuContainer {
